@@ -134,6 +134,15 @@ for [get] and [sync] commands).
 \fB\-r\fR, \fB\-\-recursive\fR
 Recursive upload, download or removal.
 .TP
+\fB\-\-check\-md5\fR
+Check MD5 sums when comparing files for [sync].
+(default)
+.TP
+\fB\-\-no\-check\-md5\fR
+Do not check MD5 sums when comparing files for [sync].
+Only size will be compared. May significantly speed up
+transfer but may also miss some changed files.
+.TP
 \fB\-P\fR, \fB\-\-acl\-public\fR
 Store objects with ACL allowing read for anyone.
 .TP
@@ -282,7 +291,7 @@ Enable verbose output.
 Enable debug output.
 .TP
 \fB\-\-version\fR
-Show s3cmd version (1.0.0-rc2) and exit.
+Show s3cmd version (1.0.0) and exit.
 .TP
 \fB\-F\fR, \fB\-\-follow\-symlinks\fR
 Follow symbolic links as if they are regular files
@@ -363,7 +372,6 @@ about matching file names against exclude and include rules.
 For example to exclude all files with ".jpg" extension except those beginning with a number use:
 .PP
 	\-\-exclude '*.jpg' \-\-rinclude '[0-9].*\.jpg'
-
 .SH SEE ALSO
 For the most up to date list of options run 
 .B s3cmd \-\-help
@@ -371,9 +379,12 @@ For the most up to date list of options run
 For more info about usage, examples and other related info visit project homepage at
 .br
 .B http://s3tools.org
-
+.SH DONATIONS
+Please consider a donation if you have found s3cmd useful:
+.br
+.B http://s3tools.org/donate
 .SH AUTHOR
-Written by Michal Ludvig <mludvig@logix.net.nz>
+Written by Michal Ludvig <mludvig@logix.net.nz> and 15+ contributors
 .SH CONTACT, SUPPORT
 Prefered way to get support is our mailing list:
 .I s3tools\-general@lists.sourceforge.net
@@ -381,7 +392,7 @@ Prefered way to get support is our mailing list:
 Report bugs to 
 .I s3tools\-bugs@lists.sourceforge.net
 .SH COPYRIGHT
-Copyright \(co 2007,2008,2009,2010 Michal Ludvig <http://www.logix.cz/michal>
+Copyright \(co 2007,2008,2009,2010,2011 Michal Ludvig <http://www.logix.cz/michal>
 .br
 This is free software.  You may redistribute copies of it under the terms of
 the GNU General Public License version 2 <http://www.gnu.org/licenses/gpl.html>.
